Details
-
Bug
-
Resolution: Done
-
P2: Important
-
4.6.2, 4.7.0
-
None
-
Linux (Gentoo AMD64, KDE 4.4.3, Qt 4.6.2 and 4.7.0 beta1)
-
eea978b9744c24200496af4f8a37d76228a29320
Description
When building against the debug version of Qt 4.6.2, my application sometimes aborts with:
ASSERT: "!(*watched)" in file widgets/qmenu.cpp, line 997
I am not able to accurately reproduce the abort; it seems to happen at random when navigating the menus of my application. But someone on the Qt mailing list mentioned:
"I have also seen this with several version of Qt including 4.7 beta 1. The way I trigger it is to open a non-modal dialog from a menu, then go back to the menu and move the mouse over the menu items. I do not understand what's wrong, but it goes away if I use Qt::QueuedConnection in the connects for the menu."