Fixed an assert in QMenu

The code was changed and changed the behaviour. This is
basically a kind of revert.

Reviewed-By: gabi
Task-Number: QTBUG-10735